[FIX] collapse animation

--- a/frontEnd/src/styles/components/_collapse.scss
+++ b/frontEnd/src/styles/components/_collapse.scss
@@ -46,16 +46,17 @@
         border-radius: 0 0 5px 5px;
         font-size: 0.75rem;
         overflow: hidden;
-        transition: max-height 0.5s ease-in-out;
+        max-height: 0;
+        transition: max-height 0.5s ease-in-out, padding 1s ease;
         
         &.open {
+            display: flex;
             padding: 3%;
             justify-items: center;
             align-items: center;
-            height: auto;
-            max-height: 100px;
+            max-height: 100vh;
         }
-
+        
         p {
             color: $red;
             font-size: 0.75rem;
